exp2, context-based dfs